[aliases]
test=pytest

[bdist_wheel]
universal=1

[coverage:run]
source = redmineflow
omit = tests/*
parallel = True
concurrency =
    thread

[metadata]
name = redmine-flow
license = GPL-2+
license_file = COPYING
author = V.S.
author_email = vladimir.savchenko@unige.ch
url = https://github.com/volodymyrss/redmine-flow/releases/tag/0.1.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Scientific/Engineering

[options]
packages = redmineflow
install_requires =
    lxml
    six
    coloredlogs
tests_require =
    pytest

[options.entry_points]
console_scripts =
    rf = redmineflow.cli:main
